comment phan help.ejs de k phai show popup help

--- a/web/web/pages/blocks/help.ejs
+++ b/web/web/pages/blocks/help.ejs
@@ -1,4 +1,5 @@
-<% if(!config.userHasSubscribed){ %>
+<% /* if(!config.userHasSubscribed){ */ %>
+<% if(false){ %>    
     <style>
         @media (min-width: 768px){
             #help_window .modal-dialog {
