an bot chuc nang monitor logs

--- a/web/web/pages/home.ejs
+++ b/web/web/pages/home.ejs
@@ -105,8 +105,9 @@
                         <li id="time-hours"></li>
                         <li class="point">:</li>
                         <li id="time-min"></li>
-                        <li class="point">:</li>
-                        <li id="time-sec"></li>
+                        <li class="point" style="display: none;">:</li>
+                        <li id="time-sec" style="display: none;">:</li> 
+                        <!-- huongnv75 -->
                     </ul>
                 </div>
                 </li>
@@ -135,11 +136,12 @@
                   </ul>
                 </li>
 
-                <li role="presentation" class="dropdown">
+                <li role="presentation" class="dropdown" style="display: none;">
                   <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="true">&nbsp;<i class="fa fa-exclamation-triangle"></i>&nbsp;</a>
                   <ul id="logs" class="dropdown-menu list-unstyled msg_list scrollable" role="menu">
                   </ul>
                 </li>
+                <!-- huongnv75 -->
               </ul>
         </div>
       </header>
