an bot chuc nang monitor logs

--- a/web/web/pages/home.ejs
+++ b/web/web/pages/home.ejs
@@ -111,12 +111,12 @@
                     </ul>
                 </div>
                 </li>
-                <li role="presentation" class="dropdown hidden-xs">
+                <li role="presentation" class="dropdown hidden-xs"  style="display: none;">
                   <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="true">&nbsp;<i class="fa fa-group"></i>&nbsp;</a>
                   <ul id="users_online" class="dropdown-menu list-unstyled msg_list scrollable" role="menu"></ul>
                 </li>
 
-                <li role="presentation" class="dropdown">
+                <li role="presentation" class="dropdown"  style="display: none;">
                   <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="true">&nbsp;<i class="fa fa-hdd-o"></i>&nbsp;</a>
                   <ul id="diskUsedList" class="dropdown-menu list-unstyled msg_list scrollable" role="menu">
                       <% addStorage.forEach(function(storage){ %>
