--- a/web/web/pages/blocks/topLeftMenu.ejs
+++ b/web/web/pages/blocks/topLeftMenu.ejs
@@ -1,8 +1,13 @@
 <div class="demo-avatar-dropdown">
   <button id="accbtn" style="color:#fff" class="mdl-button mdl-js-button mdl-js-ripple-effect"><i class="fa fa-caret-down"></i> &nbsp;<span class="usermail"></span></button>
   <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-      <li class="mdl-menu__item open-all-monitors"><div><i class="fa fa-th"></i><div><%- lang['Open All Monitors'] %></div></div></li>
-      <!-- <li class="mdl-menu__item" data-toggle="modal" data-target="#multi_mon"><div><i class="fa fa-clone"></i><div><%- lang['Monitors'] %></div></div></li> -->
+    <li class="mdl-menu__item open-all-monitors"><div><i class="fa fa-th"></i><div><%- lang['Open All Monitors'] %></div></div></li>
+    <li class="mdl-menu__item 1x1-monitor"><div><i class="fa fa-th"></i><div><%- lang['1x1 Monitor'] %></div></div></li>
+    <li class="mdl-menu__item 2x2-monitors"><div><i class="fa fa-th"></i><div><%- lang['2x2 Monitors'] %></div></div></li>
+    <li class="mdl-menu__item 3x3-monitors"><div><i class="fa fa-th"></i><div><%- lang['3x3 Monitors'] %></div></div></li>
+    <li class="mdl-menu__item 4x4-monitors"><div><i class="fa fa-th"></i><div><%- lang['4x4 Monitors'] %></div></div></li>
+    <li class="mdl-menu__item 4x8-monitors"><div><i class="fa fa-th"></i><div><%- lang['4x8 Monitors'] %></div></div></li>
+    <!-- <li class="mdl-menu__item" data-toggle="modal" data-target="#multi_mon"><div><i class="fa fa-clone"></i><div><%- lang['Monitors'] %></div></div></li> -->
       <!-- <li class="mdl-menu__item" data-toggle="modal" data-target="#powerVideo"><div><i class="fa fa-map-marker"></i><div><%- lang['Power Viewer'] %></div></div></li> -->
       <!-- <li class="mdl-menu__item" mid="" ke=""><div class="flex" monitor="timelapseJpeg"><i class="fa fa-angle-double-right"></i><div><%- lang['Timelapse'] %></div></div></li> -->
       <!-- <li class="mdl-menu__item permission_user_change" data-toggle="modal" data-target="#settings"><div><i class="fa fa-gears"></i><div><%- lang.Settings %></div></div></li> -->
